adhere to some coding guidelines, use DateFormat only locally to avoid threading issues, ...